Remove by str pattern match chunk added

--- a/tlv_to_jpg_conversion.ipynb
+++ b/tlv_to_jpg_conversion.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53288bee",
+   "id": "100f526c",
+   "metadata": {},
+   "source": [
+    "This script converts TimeLapseVideo (.tlv extension), .avi, and .mp4 videos to individual .jpg frames.\n",
+    "Adapted from [this script](https://ikhushpatel.medium.com/convert-video-to-images-images-to-video-using-opencv-python-db27a128a481)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41ea7aa0",
    "metadata": {},
    "source": [
     "### Import modules"
@@ -10,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6939672f",
+   "execution_count": 1,
+   "id": "77b4818f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c1484c",
+   "id": "afce4677",
    "metadata": {},
    "source": [
     "### Glob all video files"
@@ -31,20 +40,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fa0aca63",
+   "execution_count": 27,
+   "id": "cd2de827",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/lindsayveazey/path/to/video/directory'"
+    "# %ls /Volumes/USB-HDD\n",
+    "# for f in glob.glob('/Volumes/USB-HDD/2015/*/*_converted.mp4', \n",
+    "#                    recursive=True):\n",
+    "#     os.remove(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f37261f2",
+   "execution_count": 2,
+   "id": "b73d87f1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "path = '/Users/lindsayveazey/code/automating-video-processing'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "49c2883d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.chdir(path)\n",
     "\n",
@@ -63,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "662c6489",
+   "id": "84a63ee1",
    "metadata": {},
    "source": [
     "### Convert files "
@@ -71,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "732356b1",
+   "execution_count": 5,
+   "id": "d7151979",
    "metadata": {},
    "outputs": [],
    "source": [
